Styling and fading out of fields.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   </head>
   <body>
     <div class="pure-u-1-5"></div>
-    <div class="pure-u-3-5">
+    <div class="pure-u-3-5 main">
       <div class="splash">
-          <h1 class="splash-head">Big Bold Text</h1>
+        <h1 class="splash-head">tactile_memory</h1>
+        <div id="enter">
           <p class="splash-subhead">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Enter phrase or password you are trying to remember:
           </p>
           <p>
             <div class="form-container">
-              <input type="password" id="demo-password" value='poopypants'/>
-              <button class="submit">Submit</button>
+              <input type="text" id="password" value=""/>
+              <button class="submit">Begin</button>
             </div>
           </p>
+        </div>
       </div>
     </div>
     <div class="pure-u-1-5"></div>
